[gd_scene load_steps=13 format=3]

[ext_resource type="Script" path="res://menus/components/tab_menu_overlay/tab_menu_overlay.gd" id="1"]
[ext_resource type="AudioStream" uid="uid://btr423md21po" path="res://audio/music/White Bat Audio - The Taste of Blood.mp3" id="2"]
[ext_resource type="StyleBox" path="res://-tests/heli_test/ui/styles/button/button_normal.tres" id="3"]
[ext_resource type="PackedScene" path="res://menus/components/settings_menu/settings_menu.tscn" id="4"]
[ext_resource type="StyleBox" path="res://-tests/heli_test/ui/styles/button/button_hover.tres" id="6"]
[ext_resource type="StyleBox" path="res://-tests/heli_test/ui/styles/button/button_pressed.tres" id="7"]
[ext_resource type="Shader" path="res://-tests/heli_test/shaders/canvas_blur.gdshader" id="8"]
[ext_resource type="PackedScene" path="res://-tests/heli_test/ui/nodes/BlurBackground.tscn" id="13"]
[ext_resource type="FontFile" path="res://-tests/heli_test/ui/fonts/JetBrainsMono/JetBrainsMono.tres" id="15"]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.294118 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 8 )
shader_param/amount = 2.0

[sub_resource type="ShaderMaterial" id=11]
shader = ExtResource( 8 )
shader_param/amount = 1.0

[node name="MissionCompleteOverlay" type="Control"]
process_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
main_menu = "res://menus/main_menu/main_menu.tscn"

[node name="InGameMenu" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="BlurBackground" parent="InGameMenu" instance=ExtResource( 13 )]
material = SubResource( 2 )

[node name="Buttons" type="VBoxContainer" parent="InGameMenu"]
modulate = Color( 0, 1, 0.392157, 1 )
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = 300.0
offset_bottom = -40.0
grow_vertical = 0
custom_constants/separation = 5
alignment = 2

[node name="resume" type="Button" parent="InGameMenu/Buttons"]
offset_top = 935.0
offset_right = 260.0
offset_bottom = 965.0
grow_vertical = 0
minimum_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 15 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 3 )
text = " Complete Mission"
align = 0

[node name="BlurBackground" parent="InGameMenu/Buttons/resume" instance=ExtResource( 13 )]
material = SubResource( 2 )

[node name="settings" type="Button" parent="InGameMenu/Buttons"]
visible = false
offset_top = 935.0
offset_right = 260.0
offset_bottom = 965.0
grow_vertical = 0
minimum_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 15 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 3 )
text = " Settings"
align = 0

[node name="BlurBackground" parent="InGameMenu/Buttons/settings" instance=ExtResource( 13 )]
material = SubResource( 2 )

[node name="quit" type="Button" parent="InGameMenu/Buttons"]
offset_top = 970.0
offset_right = 260.0
offset_bottom = 1000.0
grow_vertical = 0
minimum_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 15 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 3 )
text = " Quit Game"
align = 0

[node name="BlurBackground" parent="InGameMenu/Buttons/quit" instance=ExtResource( 13 )]
material = SubResource( 2 )

[node name="MissionCompleteText" type="Panel" parent="InGameMenu"]
modulate = Color( 0, 1, 0.392157, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -375.0
offset_top = -136.0
offset_right = 375.0
offset_bottom = 136.0
custom_styles/panel = ExtResource( 3 )

[node name="BlurBackground" parent="InGameMenu/MissionCompleteText" instance=ExtResource( 13 )]
modulate = Color( 0.52549, 0.52549, 0.52549, 1 )
material = SubResource( 11 )

[node name="RichTextLabel" type="RichTextLabel" parent="InGameMenu/MissionCompleteText"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -370.0
offset_top = -131.0
offset_right = 370.0
offset_bottom = 131.0
custom_fonts/normal_font = ExtResource( 15 )
text = "MISSION COMPLETE

Thank you for playing this brief demo, this is just an incredibly small tast of the things to come. 

Feel free to stay posted by following development as it progresses checked either Itch.IO or through the games GitHub repo. 

Kindest regards,

Sam Keightley"

[node name="SettingsMenu" parent="." instance=ExtResource( 4 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="pressed" from="InGameMenu/Buttons/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="InGameMenu/Buttons/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="InGameMenu/Buttons/quit" to="InGameMenu" method="_on_quit_pressed"]
